# khawasu_pc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  arg_parser.h  c_api.cpp  c_api.h  config.h  config_example.toml  device_info.cpp  device_info.h  khawasu_app.cpp  khawasu_app.h  khawasu_capi_test.cpp  logical_callback_device.cpp  logical_callback_device.h  main.cpp  main_client.cpp  phy_device_manager.cpp  phy_device_manager.h
interfaces/: mesh_socket_interface.cpp  mesh_socket_interface.h
protocol/: Request.ini  daemon.cpp  daemon.h
socket/: socket_base.h  unixsocket.cpp  winsocket.cpp
